@@ -15,6 +15,8 @@
   * Remove previous <ip> tags when doing 
     ip_auto_assignment (#1319)
   * jacks-app-expanded (viewer) has 'back' button (#1310).
+  * Update status (history and node color) even when manifests come in 
+    after statuses start coming in (#1314)
 
 == 2.27 ==
  * Progress on #299 and #1120, remove dead code.
